Fix wrapping/stretching of breadcrumbs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -121,7 +121,7 @@ code, pre, kbd, samp, .prism-code {
   }
 
   .theme-doc-breadcrumbs .breadcrumbs--collapsed .breadcrumbs__item--active {
-    flex: 1 1 0;
+    flex: 0 1 auto;
     min-width: 0;
     overflow: hidden;
   }
